from 2.5.7 to 2.5.8
- fixed double memory release occuring in a particular case of read error
- improving robustness of FSA code against data corruption
- fixed bug: DAR_DUC_PATH was not used with -F and -~ options

from 2.5.6 to 2.5.7
- fixed bug leading dar to not include directories given to -g option nor
  to exclude directories given to -P option when at the same time the
  directory given to -R option starts by a dot ("-R ./here" in place of
  "-R here")
- bug fix and speed improvement: under certain circumstances dar was
  reading several times the data at slice boundary, leading dar to ask for
  slice N then N-1 then again N, this caused sub-optimal performance and
  was triggering user script unnecessarily

from 2.5.5 to 2.5.6
- added speed optimization when comparing dates with hourshift flexibility
  (-H option)
- fixed bug met when using as reference an archive generated by dar 2.5.4
  or older, bug that lead dar saving almost all file even those that did
  not change.

from 2.5.4 to 2.5.5
- fixed message displayed when reading old archives
- fixed bug that avoided dar-2.5.x code to read old archive format when
  special allocation was set (by defaut) at compilation time
- disabling special-alloc by default reducing memory footprint
- fixed error in FAQ about the way ctime/atime/mtime are modified during
  normal operating system life.
- new implementation of class datetime with better memory footprint
- avoding storing sub-microsecond part of date to preserve limitint
  ability to store large dates
- moving field cat_inode::last_cha from pointer-to-field to plain field
  of the class, this slightly reduce catalogue memory footprint.
- fixing bug in the returned exit status when dar failed executing DUC
  command due to system error (now returning the expected code 6 in that
  case too)

from 2.5.3 to 2.5.4
- fixing missing included files for libdar API
- removed extra try/catch block introduced by commit
  72da5cad5e52f959414b3163a2e2a320c2bc721e